HR-155 Fixed floaters overflow

--- a/src/styles/SharedCanvas.css
+++ b/src/styles/SharedCanvas.css
@@ -4,6 +4,7 @@
   width: 100vw;
   height: 100vh;
   z-index: 0;
+  overflow: hidden;
 }
 
 #canvas-host {
